src/styles/Cart.module.css
.productImg{
   width: 10rem;
   height: 15rem;
   object-fit: contain;
}

.mainContainer{
    padding: 1rem;
    margin: 0;

    min-height: 85vh;
}

.cartContainer{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 1rem;


}



.productCard{
    display: flex;
    justify-content: space-around;
    align-items: center;
    width: 100%;
    border: 2px solid rgb(195, 191, 191);
    box-shadow: 2px 2px 2px gray;
    color: var(--additional-color1);
    background-color: white;
    padding-top: 1rem;
    padding-bottom: 1rem;
}



.empty{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap :2rem;
    font-size: 2rem;
    font-weight: bold;
}

.buttons{
    display: flex;
    justify-content:center;
    flex-direction: column;
    align-items: end;
    gap: 2rem;
}



.price{
    font-size: 2rem;
    font-weight: bold;
    color: rgb(74, 73, 73);
}

.textContainer{
    width: 200px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.title{
    text-align: center;
    background-color: var(--secondary-color);
    color: white;
    margin: 0;
    padding: 1.2rem;


}




@media (max-width: 375px){
    .productImg{
        width: 7rem !important;
    }
    .productCard{
        font-size: 0.7rem !important;
        
    }
    .removeBtn{
        font-size: 1rem !important;
    }
}

@media (max-width: 480px){
    .productImg{
        width: 10rem;
    }
    .productCard{
        font-size: 0.7rem;
        
    }
    .removeBtn{
        font-size: 1rem !important;
    }
}

@media (max-width: 1024px){
    .productCard{
        flex-direction: column;
        gap: 1rem;
        padding: 1rem;
        width: 60%;
        text-align: center;
    }

    .buttons{
        align-items: center;
    }

    .cartContainer li{
    position: relative;
    right: 1.15rem;
}
}

